--- a/package.json
+++ b/package.json
@@ -11,13 +11,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0",
+    "@angular/cdk": "^12.2.4",
     "@angular/common": "~12.1.0",
     "@angular/compiler": "~12.1.0",
     "@angular/core": "~12.1.0",
     "@angular/forms": "~12.1.0",
+    "@angular/material": "^12.2.3",
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@fortawesome/fontawesome-free": "^5.6.3",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@popperjs/core": "^2.10.0",
+    "@types/chart.js": "^2.9.34",
+    "angular-bootstrap-md": "^12.0.0",
+    "animate.css": "^3.7.2",
+    "bootstrap": "^5.1.0",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
